fix(接口测试): 修复误报状态的时候执行率错误的缺陷
--bug=1039427 --user=王孝刚 【项目任务中心】实时任务-查看用例/场景独立报告任务-请求分析-误报通过率计算错误
https://www.tapd.cn/55049933/s/1497756